[package]
name = "yaxpeax-gbc"
version = "0.2.10"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2021"
keywords = []
repository = "https://git.iximeow.net/yaxpeax-gbc/about/"
description = "gameboy color emulator"
readme = "README.md"

[[bin]]
name = "yaxgbc"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
hex = "0.4.0"
num-traits = "0.2.10"
itertools = "0.10.1"
rand = "0.8.5"
egui-miniquad = "0.14.0"
miniquad = "*"
egui = "*"
rodio = { version = "*", default-feature = false }

# common interfaces for all yaxpeax decoders
yaxpeax-arch = { version = "0.2.4" , default-features = false, features = ["std"] }

yaxpeax-sm83 = { version = "0.2", path = "/toy/yaxpeax/arch/sm83/" }

[profile.release]
lto = true
